# chameleon-ng-linux

./: .gitignore  CMakeLists.txt
include/csgo/: csgo.hpp
include/csgo/Classes/: CBaseClientState.hpp  DataTable.hpp  IClientEntity.hpp
include/csgo/Definitions/: ButtonCode.hpp
include/csgo/Interfaces/: IBaseClientDLL.hpp  IClientEntityList.hpp  IGameEventManager2.hpp  IInputInternal.hpp  ILauncherMgr.hpp  IVEngineClient.hpp  IVModelInfoClient.hpp
include/csgo/Utilities/: Interface.hpp  NetVars.hpp
include/imgui/examples/: imgui_impl_sdl.cpp
src/: FindPattern.hpp  ItemDefinitions.hpp  Linker.cpp  Renderer.cpp  Renderer.hpp
